--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^8.3.1",
     "http": "0.0.1-security",
     "socket.io": "^3.1.2",
-    "websocket": "^1.0.33",
-    "ws": "^7.4.4"
+    "websocket": "^1.0.33"
   }
 }
