--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "firebase": "^8.3.1",
+    "child_process": "^1.0.2",
+    "dateformat": "^4.5.1",
+    "firebase": "^8.4.2",
+    "firebase-admin": "^9.6.0",
     "http": "0.0.1-security",
-    "socket.io": "^3.1.2",
-    "websocket": "^1.0.33"
+    "path": "^0.12.7",
+    "websocket": "^1.0.34"
   }
 }
