--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,12 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "child_process": "^1.0.2",
-    "dateformat": "^4.5.1",
-    "firebase": "^8.4.2",
-    "firebase-admin": "^9.6.0",
-    "http": "0.0.1-security",
-    "path": "^0.12.7",
-    "websocket": "^1.0.34"
+    "express": "^4.17.1",
+    "puppeteer": "^9.1.0"
   }
 }
