--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "puppeteer-heroku-test",
+  "name": "proxy",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "puppeteer": "^2.1.1"
+    "absolutify": "^0.1.0",
+    "express": "^4.16.3",
+    "puppeteer": "^1.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  },
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "9.11.2"
   }
 }
