--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "proxy",
+  "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "absolutify": "^0.1.0",
-    "express": "^4.16.3",
-    "puppeteer": "^1.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.4"
-  },
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "engines": {
-    "node": "9.11.2"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "mqtt-packet": "^7.0.0",
+    "path": "^0.12.7",
+    "puppeteer": "^9.1.0"
   }
 }
