--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "facebook",
+  "name": "raiyan",
   "version": "1.0.0",
   "description": "",
-  "main": "api.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -11,9 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "fs": "^0.0.1-security",
-    "mqtt-packet": "^7.0.0",
-    "path": "^0.12.7",
-    "puppeteer": "^10.2.0"
+    "request": "^2.88.2"
   }
 }
