--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raiyan",
+  "name": "scraping",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "request": "^2.88.2"
+    "mqtt-packet": "^7.1.1",
+    "puppeteer": "^10.2.0"
   }
 }
