--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scraping",
+  "name": "raiyan",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mqtt-packet": "^7.1.1",
-    "puppeteer": "^10.2.0"
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "firebase-admin": "^10.0.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   }
 }
