--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
-    "request": "^2.88.2",
-    "uuid-v4": "^0.1.0"
+    "request": "^2.88.2"
   }
 }
