--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "raiyan",
+  "name": "home",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^9.12.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "mqtt-packet": "^7.1.1",
+    "path": "^0.12.7",
+    "puppeteer": "^10.2.0",
+    "request": "^2.88.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "firebase-admin": "^10.0.1",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "path": "^0.12.7",
-    "request": "^2.88.2"
-  }
+  "license": "ISC"
 }
